# swagger/swagger.yaml
@@ -1,14 +1,5 @@
 definitions:
-  github_com_wesleyburlani_go-rest-api_internal_users.User:
-    properties:
-      email:
-        type: string
-      id:
-        type: integer
-      password:
-        type: string
-    type: object
-  github_com_wesleyburlani_go-rest-api_pkg_crypto.JwtToken:
+  crypto.JwtToken:
     properties:
       token:
         type: string
@@ -27,6 +18,15 @@ definitions:
     properties:
       email:
         type: string
+      password:
+        type: string
+    type: object
+  users.User:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
       password:
         type: string
     type: object
@@ -49,7 +49,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_wesleyburlani_go-rest-api_pkg_crypto.JwtToken'
+            $ref: '#/definitions/crypto.JwtToken'
         "400":
           description: Bad Request
           schema:
@@ -71,7 +71,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/github_com_wesleyburlani_go-rest-api_internal_users.User'
+              $ref: '#/definitions/users.User'
             type: array
         "500":
           description: Internal Server Error
@@ -95,7 +95,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/github_com_wesleyburlani_go-rest-api_internal_users.User'
+            $ref: '#/definitions/users.User'
         "400":
           description: Bad Request
           schema:
@@ -108,6 +108,32 @@ paths:
       tags:
       - users
   /users/{id}:
+    delete:
+      description: deletes an existing user
+      parameters:
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: deletes an existing user
+      tags:
+      - users
     get:
       description: returns an existing user
       parameters:
@@ -122,7 +148,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_wesleyburlani_go-rest-api_internal_users.User'
+            $ref: '#/definitions/users.User'
         "404":
           description: Not Found
           schema:
@@ -154,7 +180,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_wesleyburlani_go-rest-api_internal_users.User'
+            $ref: '#/definitions/users.User'
         "400":
           description: Bad Request
           schema:
@@ -175,7 +201,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_wesleyburlani_go-rest-api_internal_users.User'
+            $ref: '#/definitions/users.User'
         "404":
           description: Not Found
           schema:
